--- a/html/default/en/index.html
+++ b/html/default/en/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- __Mutiny_Template__ beware the %% -->
+<!-- __Mutiny_Template__ ... beware the %% -->
 <html><head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  <link rel="stylesheet" media="screen, screen" href="/_skin/default.css" type="text/css">
  <script language="javascript" src="/_skin/main.js"></script>
- <title>Mutiny</title>
+ <title>Mutiny %(version)s</title>
 </head><body>
  <div id='main'>
   <h1 style='text-align: center'>
