--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -3,9 +3,15 @@
 <html><head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  <link rel="stylesheet" media="screen, screen" href="/_skin/default.css" type="text/css">
- <script language="javascript" src="/_skin/main.js"></script>
+ <script language="javascript" src="/_skin/jquery-1.7.2.min.js"></script>
+ <script language="javascript" src="/_skin/mutiny.js"></script>
  <title>%(channel)s (mutiny %(version)s)</title>
-</head><body>
+ <script language='javascript'>
+   var mutiny_network = '%(network)s';
+   var mutiny_channel = '%(channel)s';
+   var mutiny_uid = ''; /* '_FIXME_(uid)s'; */
+ </script>
+</head><body onLoad="mutiny.Main();">
 
  <div id='main'>
   <h1>%(channel)s</h1>
