--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -3,7 +3,7 @@
 <html><head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  <link rel="stylesheet" media="screen, screen" href="/_skin/default.css" type="text/css">
- <script language="javascript" src="/_skin/jquery-1.7.2.min.js"></script>
+ <script language="javascript" src="/_skin/jquery-1.7.2.min.js.gz"></script>
  <script language="javascript" src="/_skin/mutiny.js"></script>
  <title>%(channel)s (mutiny %(version)s)</title>
  <script language='javascript'>
