Recording info about people works

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -88,7 +88,7 @@
    </p>
   </div>
 
-  <div id='template-person'>
+  <div id='template-whois'>
    <p class='person' mutiny_style=''>
     <img alt='' mutiny_avatar=''>
     <b class=name>_NICK_</b> _INFO_
