Progress, progress, everywhere

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -56,7 +56,7 @@
   </div>
 
   <div id='template-msg'>
-   <p class='comment' mutiny_style=''>
+   <p class='comment _UID_' mutiny_style=''>
     <tt class=time>_HH_MM_</tt>
     <img alt='' mutiny_avatar=''>
     <b class=name>_NICK_:</b>
@@ -65,7 +65,7 @@
   </div>
 
   <div id='template-act'>
-   <p class='action' mutiny_style=''>
+   <p class='action _UID_' mutiny_style=''>
     <tt class=time>_HH_MM_</tt>
     <img alt='' mutiny_avatar=''>
     <i><b class=name>_NICK_</b> _TEXT_</i>
@@ -73,7 +73,7 @@
   </div>
 
   <div id='template-topic'>
-   <p class='topic'>
+   <p class='topic _UID_'>
     <span class='label'>Topic:</span>
     _TEXT_
     <span class='label'>(_NICK_)</span>
@@ -81,10 +81,18 @@
   </div>
 
   <div id='template-part'>
-   <p class='part' mutiny_style=''>
+   <p class='part _UID_' mutiny_style=''>
     <tt class=time>_HH_MM_</tt>
     <img alt='' mutiny_avatar=''>
     <b class=name>_NICK_</b> left
+   </p>
+  </div>
+
+  <div id='template-nick'>
+   <p class='nick _UID_' mutiny_style=''>
+    <tt class=time>_HH_MM_</tt>
+    <img alt='' mutiny_avatar=''>
+    <b class=name>_NICK_</b> is now <b class=name>_TEXT_</b>
    </p>
   </div>
 
