Topics should be visible at all filter levels

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -80,7 +80,7 @@
   </div>
 
   <div id='template-topic'>
-   <p class='mutiny_log topic _UID_ _STAT_'>
+   <p class='mutiny_log topic voice notes _UID_ _STAT_'>
     <span class='label'>Topic:</span>
     _TEXT_
     <span class='label'>(_NICK_)</span>
