Add UI feedback for connection troubles

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -111,4 +111,8 @@
   </div>
 
  </div><!-- End of JavaScript templates -->
+
+ <p id='disconnected'>
+   Connection lost, will retry in <span id='countdown'>N</span> seconds.
+ </p>
 </body></html>
