Better AJAX error handling

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -115,4 +115,5 @@
  <p id='disconnected'>
    Connection lost, will retry in <span id='countdown'>N</span> seconds.
  </p>
+ <div id='debug_log'></div>
 </body></html>
