Enhanced the channel view to use config data

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -16,7 +16,10 @@
  <noscript><h1 class='error'>SORRY!  This page requires JavaScript.</h1></noscript>
 
  <div id='main'>
-  <h1>%(channel)s</h1>
+  <h1 title='%(network_desc)s : %(channel)s'>
+   <small class='mutiny_logo'><a href='/'>mutiny</a>:</small>
+   %(channel_desc)s
+  </h1>
   <div id='channel'>
   </div>
   <!-- div id='input'>
