Hide unimplemented features from UI

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -51,10 +51,12 @@
                       Show everything</p>
     <p class='toggle'><input type=radio name=filter value=talk checked>
                       Discussions</p>
+ <!-- FIXME: Implement these
     <p class='toggle'><input type=radio name=filter value=voice>
                       Designated speakers</p>
     <p class='toggle'><input type=radio name=filter value=notes>
                       Meeting summary</p>
+   -->
    </div>
  </div>
 
