Presence is an ucky word

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -41,7 +41,7 @@
  <div id='meta'>
    <div id='presence' class='display-%(logged_in)s'>
      <a id=logout href='javascript:mutiny.logout();'>log out</a>
-     <h2>Your presence:</h2>
+     <h2>You are:</h2>
      <div id='me'>
      </div>
    </div>
