--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -126,8 +126,14 @@
 
  </div><!-- End of JavaScript templates -->
 
+ <div id='footer'>
+  <p>
+   Powered by <b>mutiny %(version)s</b> -
+   <a href="https://github.com/pagekite/plugins-pyMutiny">Fork me on Github</a>!
+  </p>
+  <div id='debug_log'></div>
+ </div>
  <p id='disconnected'>
-   Connection lost, will retry in <span id='countdown'>N</span> seconds.
+  Connection lost, will retry in <span id='countdown'>N</span> seconds.
  </p>
- <div id='debug_log'></div>
 </body></html>
