--- a/html/default/en/index.html
+++ b/html/default/en/index.html
@@ -11,14 +11,21 @@
    <br>
    <small><i>What happens when Pirates have Meetings?</i></small>
   </h1>
-  <p>Welcome to Mutiny!  This is a tool for organizing on-line meetings,
-     created as an experiment for the Icelandic Pirate Party.</p>
-  <p>Anyone can hang out and chat in a meeting room, as long as a meeting is
-     not in session - formal meetings may require an invitation or some sort
-     of identification.</p>
+  <div id='about'>
+   <p>Welcome to Mutiny!  This is a tool for organizing on-line meetings,
+      created as an experiment for the Icelandic Pirate Party.</p>
+   <p>Anyone can hang out and chat in a meeting room, as long as a meeting is
+      not in session - formal meetings may require an invitation or some sort
+      of identification.</p>
+   <p><br><br><br></p>
+  </div>
  </div>
  <div id='meta'>
   <h2>Available rooms:</h2>
   %(linked_channel_list)s
  </div>
+ <div id='footer'><p>
+  Powered by <b>mutiny %(version)s</b> -
+  <a href="https://github.com/pagekite/plugins-pyMutiny">Fork me on Github</a>!
+ </p></div>
 </body></html>
