Handle channel presence better

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -117,6 +117,14 @@
    </p>
   </div>
 
+  <div id='template-quit'>
+   <p class='mutiny_log part _UID_ _STAT_' mutiny_style=''>
+    <tt class=time>_HH_MM_</tt>
+    <img alt='' mutiny_avatar=''>
+    <b class=name>_NICK_</b> quit: _TEXT_
+   </p>
+  </div>
+
   <div id='template-nick'>
    <p class='mutiny_log nick _UID_ _STAT_' mutiny_style=''>
     <tt class=time>_HH_MM_</tt>
@@ -126,7 +134,7 @@
   </div>
 
   <div id='template-whois'>
-   <p class='person _STAT_' mutiny_style=''>
+   <p class='person _HERE_ _STAT_' mutiny_style=''>
     <img alt='' mutiny_avatar=''>
     <a class=name href='_URL_'>_NICK_</a> _INFO_
    </p>
