Minor HTML/CSS tweaks

--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -84,10 +84,11 @@
   </div>
 
   <div id='template-msg-more'>
-   <span class='comment-more'>
+   <div class='comment-more'>
+    <tt class=time>_HH_MM_</tt>
     <b class=name>_NICK_:</b>
      _TEXT_
-   </span>
+   </div>
   </div>
 
   <div id='template-act'>
