--- a/html/default/en/channel.html
+++ b/html/default/en/channel.html
@@ -150,7 +150,7 @@
 
  <div id='footer'>
   <p>
-   Powered by <b>mutiny %(version)s</b> -
+   P)owered by <b>mutiny %(version)s</b> -
    <a href="https://github.com/pagekite/plugins-pyMutiny">Fork me on Github</a>!
   </p>
   <div id='debug_log'></div>
