--- a/html/default/en/index.html
+++ b/html/default/en/index.html
@@ -25,7 +25,7 @@
   %(linked_channel_list)s
  </div>
  <div id='footer'><p>
-  Powered by <b>mutiny %(version)s</b> -
+  P)owered by <b>mutiny %(version)s</b> -
   <a href="https://github.com/pagekite/plugins-pyMutiny">Fork me on Github</a>!
  </p></div>
 </body></html>
